# argon-server

./: .gitignore  API.md  Cargo.toml  LICENSE  README.md
.github/workflows/: server.yml
central/: Cargo.toml  diesel.toml
central/migrations/2025-05-03-231445_add_api_tokens/: up.sql
central/migrations/2025-11-29-182035-0000_add_token_log/: down.sql  up.sql
central/src/: api_error.rs  api_token_manager.rs  config.rs  database.rs  health_state.rs  ip_allowlist.rs  ip_blocker.rs  main.rs  node_handler.rs  rate_limiter.rs  routes.rs  routes_util.rs  schema.rs  state.rs  token_issuer.rs
central/src/misc/: Rocket.toml.template
central/src/routes/: admin.rs  api_error.rs  client.rs  dev.rs  mod.rs  routes_util.rs  status.rs  validation.rs  websockets.rs
docs/: client-api.md  server-api.md
node/: Cargo.toml
node/src/: gd_client.rs  lib.rs  logger.rs  main.rs  state.rs  worker.rs
shared/: Cargo.toml
shared/src/: crypto.rs  data.rs  lib.rs  logger.rs  node_connection.rs  util.rs
