[package]
name = "argon-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon-shared = { path = "../shared" }
argon-node = { path = "../node" }
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
json_comments = "0.2.2"
async-watcher = "0.3.0"
hex = "0.4.3"
rand = "0.9.0"
ipnet = "2.11.0"
iprange = "0.6.7"
hmac = "0.12.1"
blake3 = "1.8.1"
base64 = "0.22.1"
bytebuffer = "2.3.0"
nohash-hasher = "0.2.0"
