[package]
name = "argon-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
colored = "3.0.0"
crypto_box = { version = "0.9.1", default-features = false, features = ["alloc", "getrandom", "rand_core", "chacha20"] }
crypto_secretbox = { version = "0.1.1", default-features = false, features = ["alloc", "getrandom", "rand_core", "chacha20"] }
hex = "0.4.3"
int-enum = "1.2.0"
log = "0.4.27"
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["full"] }
